add header with a reserved paragraph space

--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
 </head>
 
 <body>
-    <h1></h1>
+     <!-- Header -->
+  <header>
+    <h1>This is Ruihan Gao's Page</h1>
+    <p>
+      header paragraph space
+    </p>
+  </header>
 </body>
 </html>
