add navbar with four items

--- a/index.html
+++ b/index.html
@@ -17,5 +17,14 @@
       header paragraph space
     </p>
   </header>
+
+    <!-- Navbar -->
+    <nav>
+        <a href="#">About Me</a>
+        <a href="#">Work</a>
+        <a href="#">Contact Me</a>
+        <a href="#">Resume</a>
+    </nav>
+    
 </body>
 </html>
