add ul to each nav item/css

--- a/index.html
+++ b/index.html
@@ -21,10 +21,35 @@
     <!-- Navbar -->
     <nav>
         <a href="#">About Me</a>
+        <ul>
+          <li>food</li>
+          <li>animals</li>
+          <li>fun fact</li>
+          <li>background</li>
+        </ul>
+
         <a href="#">Work</a>
+        <ul>
+            <li>project1</li>
+            <li>project2</li>
+            <li>project3</li>
+            <li>project4</li>
+        </ul>
+
         <a href="#">Contact Me</a>
+        <ul>
+            <li>Phone</li>
+            <li>Email</li>
+            <li>Github</li>
+            <li>Slack</li>
+        </ul>
+
         <a href="#">Resume</a>
+        <ul>
+            <li>My Portfolio</li>
+        </ul>
+        
     </nav>
-    
+
 </body>
 </html>
