add class to nav bar items/css

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <!-- Navbar -->
     <nav>
-        <a href="#">About Me</a>
+        <a href="#click" class="navbar">About Me</a>
         <ul>
           <li>food</li>
           <li>animals</li>
@@ -28,7 +28,7 @@
           <li>background</li>
         </ul>
 
-        <a href="#">Work</a>
+        <a href="#click" class="navbar"">Work</a>
         <ul>
             <li>project1</li>
             <li>project2</li>
@@ -36,7 +36,7 @@
             <li>project4</li>
         </ul>
 
-        <a href="#">Contact Me</a>
+        <a href="#click" class="navbar"">Contact Me</a>
         <ul>
             <li>Phone</li>
             <li>Email</li>
@@ -44,11 +44,11 @@
             <li>Slack</li>
         </ul>
 
-        <a href="#">Resume</a>
+        <a href="#click" class="navbar"">Resume</a>
         <ul>
             <li>My Portfolio</li>
         </ul>
-        
+
     </nav>
 
 </body>
