add hover dropdown to navbar

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
     <!-- Navbar -->
     <nav>
+        <div class="dropdownnav">
         <a href="#click" class="navbar">About Me
         <ul class="navbar-dropdown">
           <li>food</li>
@@ -52,6 +53,7 @@
             <li>My Portfolio</li>
         </ul>
         </a>
+        </div>
     </nav>
 
 </body>
