--- a/index.html
+++ b/index.html
@@ -60,5 +60,21 @@
         <!-- </div> -->
     </nav>
 
+    <div class="area" >
+        <ul class="circles">
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+        </ul>
+    </div >
+    
+
 </body>
 </html>
