add main and footer structure to html

--- a/index.html
+++ b/index.html
@@ -74,7 +74,14 @@
                 <li></li>
         </ul>
     </div >
-    
+
+    <main>
+
+    </main>
+
+    <footer>
+        
+    </footer>
 
 </body>
 </html>
