update header background color fix hover dropdown nav

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title></title>
+    <title>Ruihan Gao Portfolio</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" type="text/css" href="./assets/css/reset.css">
@@ -16,8 +16,6 @@
     <p>
       header paragraph space
     </p>
-  </header>
-
     <!-- Navbar -->
     <nav>
         <!-- <div class="dropdownnav"> -->
@@ -74,7 +72,7 @@
                 <li></li>
         </ul>
     </div >
-
+</header>
     <main>
 
     </main>
