add main basic structrue

--- a/index.html
+++ b/index.html
@@ -73,8 +73,30 @@
         </ul>
     </div >
 </header>
-    <main>
 
+    <main>
+        <div class="products">
+            <section class="card">
+              <header>Camera</header>
+              <img src="./assets/images/camera.jpg" alt="camera" />
+              <p>Price: $300</p>
+            </section>
+            <section class="card">
+              <header>Tablet</header>
+              <img src="./assets/images/tablet.jpg" alt="tablet" />
+              <p>Price: $150</p>
+            </section>
+            <section class="card">
+              <header>Toilet Paper</header>
+              <img src="./assets/images/toilet-paper.jpg" alt="toilet paper" />
+              <p>Price: $30</p>
+            </section>
+            <section class="card">
+              <header>Wooden Spoons</header>
+              <img src="./assets/images/wooden-spoons.jpg" alt="wooden spoons" />
+              <p>Price: $10</p>
+            </section>
+          </div>
     </main>
 
     <footer>
