build detailed body structure

--- a/index.html
+++ b/index.html
@@ -75,26 +75,34 @@
 </header>
 
     <main>
-        <div class="products">
-            <section class="card">
-              <header>Camera</header>
-              <img src="./assets/images/camera.jpg" alt="camera" />
-              <p>Price: $300</p>
+        <!-- block -->
+        <!-- <div class="container clearfix">
+            <div class="item item1"></div>
+            <div class="item item2"></div>
+            <div class="item item3"></div>
+            <div class="item item4"></div>
+        </div> -->
+        <!-- boxes -->
+        <div class="category">
+            <section class="card1">
+              <header>About Me</header>
+              <!-- <img src="./assets/images/camera.jpg" alt="camera" />
+              <p>Price: $300</p> -->
             </section>
-            <section class="card">
-              <header>Tablet</header>
-              <img src="./assets/images/tablet.jpg" alt="tablet" />
-              <p>Price: $150</p>
+            <section class="card2">
+              <header>Contact Me</header>
+              <!-- <img src="./assets/images/tablet.jpg" alt="tablet" />
+              <p>Price: $150</p> -->
             </section>
-            <section class="card">
-              <header>Toilet Paper</header>
+            <!-- <section class="card3">
+              <header> about me details</header>
               <img src="./assets/images/toilet-paper.jpg" alt="toilet paper" />
-              <p>Price: $30</p>
-            </section>
-            <section class="card">
-              <header>Wooden Spoons</header>
-              <img src="./assets/images/wooden-spoons.jpg" alt="wooden spoons" />
-              <p>Price: $10</p>
+              <p>Price: $30</p> 
+            </section> -->
+            <section class="card4">
+              <header>Work</header>
+              <!-- <img src="./assets/images/wooden-spoons.jpg" alt="wooden spoons" />
+              <p>Price: $10</p> -->
             </section>
           </div>
     </main>
