--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
         <div class="category">
             <section class="card1">
               <header>About Me</header>
+              <p>about me details</p>
               <!-- <img src="./assets/images/camera.jpg" alt="camera" />
               <p>Price: $300</p> -->
             </section>
@@ -101,6 +102,16 @@
             </section> -->
             <section class="card4">
               <header>Work</header>
+              <div class="container">
+                <div class="item item1"></div>
+                <p>item 1</p>
+                <div class="item item2"></div>
+                <p>item 2</p>
+                <div class="item item3"></div>
+                <p>item 3</p>
+                <div class="item item4"></div>
+                <p>item 4</p>
+             </div> 
               <!-- <img src="./assets/images/wooden-spoons.jpg" alt="wooden spoons" />
               <p>Price: $10</p> -->
             </section>
