link temp images to each project

--- a/index.html
+++ b/index.html
@@ -104,13 +104,17 @@
               <header>Work</header>
               <div class="container">
                 <div class="item item1"></div>
-                <p>item 1</p>
+                <img src="/assets/images/temp.png" alt="Project 1">
+                <!-- <p>item 1</p> -->
                 <div class="item item2"></div>
-                <p>item 2</p>
+                <!-- <p>item 2</p> -->
+                <img src="/assets/images/temp.png" alt="Project 2">
                 <div class="item item3"></div>
-                <p>item 3</p>
+                <!-- <p>item 3</p> -->
+                <img src="/assets/images/temp.png" alt="Project 3">
                 <div class="item item4"></div>
-                <p>item 4</p>
+                <!-- <p>item 4</p> -->
+                <img src="/assets/images/temp.png" alt="Project 4">
              </div> 
               <!-- <img src="./assets/images/wooden-spoons.jpg" alt="wooden spoons" />
               <p>Price: $10</p> -->
