--- a/index.html
+++ b/index.html
@@ -84,42 +84,65 @@
         </div> -->
         <!-- boxes -->
         <div class="category">
-            <section class="card1">
+            <section class="card card1">
               <header>About Me</header>
               <p>about me details</p>
               <!-- <img src="./assets/images/camera.jpg" alt="camera" />
               <p>Price: $300</p> -->
             </section>
-            <section class="card2">
+            <section class="card card2">
               <header>Contact Me</header>
               <!-- <img src="./assets/images/tablet.jpg" alt="tablet" />
               <p>Price: $150</p> -->
             </section>
-            <!-- <section class="card3">
-              <header> about me details</header>
-              <img src="./assets/images/toilet-paper.jpg" alt="toilet paper" />
-              <p>Price: $30</p> 
-            </section> -->
-            <section class="card4">
-              <header>Work</header>
-              <div class="container">
-                <div class="item item1"></div>
-                <img src="/assets/images/temp.png" alt="Project 1">
+            <!-- <section class="card card3">
+              <header> about me details</header> -->
+              <!-- <img src="./assets/images/toilet-paper.jpg" alt="toilet paper" />
+              <p>Price: $30</p>  -->
+            <!-- </section> -->
+            <section class="card card4">
+                <div class="grid-container">
+                    <div class="item1">Porject1
+                      <a herf="#">
+                        <img src="../Portfolio/assets/images/temp.jpg" alt="work">
+                      </a>
+                    </div>  
+                    <div class="item2">Porject2
+                      <a herf="#">
+                        <img src="../Portfolio/assets/images/temp.jpg" alt="work">
+                      </a>
+                    </div>
+                    <div class="item3">Porject3
+                      <a herf="#">
+                        <img src="../Portfolio/assets/images/temp.jpg" alt="work">
+                      </a>
+                    </div>
+                    <div class="item4">Porject4
+                      <a herf="#">
+                        <img src="../Portfolio/assets/images/temp.jpg" alt="work">
+                      </a>
+                    </div>
+                </div>
+            </section>
+              <!-- <header>Work</header>
+              <div class="flex-container">
+                <div class="item item1"></div> -->
+                <!-- <img src="./assets/images/temp.jpg" width="300" height="150" alt="Project 1"> -->
                 <!-- <p>item 1</p> -->
-                <div class="item item2"></div>
+                <!-- <div class="item item2"></div> -->
                 <!-- <p>item 2</p> -->
-                <img src="/assets/images/temp.png" alt="Project 2">
-                <div class="item item3"></div>
+                <!-- <img src="./assets/images/temp.jpg" width="300" height="150" alt="Project 2">
+                <div class="item item3"></div> -->
                 <!-- <p>item 3</p> -->
-                <img src="/assets/images/temp.png" alt="Project 3">
-                <div class="item item4"></div>
+                <!-- <img src="./assets/images/temp.jpg" width="300" height="150" alt="Project 3">
+                <div class="item item4"></div> -->
                 <!-- <p>item 4</p> -->
-                <img src="/assets/images/temp.png" alt="Project 4">
-             </div> 
+                <!-- <img src="./assets/images/temp.jpg" width="300" height="150" alt="Project 4">
+             </div>  --> -->
               <!-- <img src="./assets/images/wooden-spoons.jpg" alt="wooden spoons" />
               <p>Price: $10</p> -->
-            </section>
-          </div>
+            <!-- </section> -->
+          <!-- </div> -->
     </main>
 
     <footer>
