link glow effect to grid items add border effect

--- a/index.html
+++ b/index.html
@@ -101,23 +101,24 @@
               <p>Price: $30</p>  -->
             <!-- </section> -->
             <section class="card card4">
+                <header>Work</header>
                 <div class="grid-container">
-                    <div class="item1">Porject1
+                    <div class="item item1">Porject1
                       <a herf="#">
                         <img src="../Portfolio/assets/images/temp.jpg" alt="work">
                       </a>
                     </div>  
-                    <div class="item2">Porject2
+                    <div class="item item2">Porject2
                       <a herf="#">
                         <img src="../Portfolio/assets/images/temp.jpg" alt="work">
                       </a>
                     </div>
-                    <div class="item3">Porject3
+                    <div class="item item3">Porject3
                       <a herf="#">
                         <img src="../Portfolio/assets/images/temp.jpg" alt="work">
                       </a>
                     </div>
-                    <div class="item4">Porject4
+                    <div class="item item4">Porject4
                       <a herf="#">
                         <img src="../Portfolio/assets/images/temp.jpg" alt="work">
                       </a>
