change grid border shadow effect

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                 <div class="item item4"></div> -->
                 <!-- <p>item 4</p> -->
                 <!-- <img src="./assets/images/temp.jpg" width="300" height="150" alt="Project 4">
-             </div>  --> -->
+             </div>  -->
               <!-- <img src="./assets/images/wooden-spoons.jpg" alt="wooden spoons" />
               <p>Price: $10</p> -->
             <!-- </section> -->
