link project to images

--- a/index.html
+++ b/index.html
@@ -104,22 +104,22 @@
                 <header>Work</header>
                 <div class="grid-container">
                     <div class="item item1">Porject1
-                      <a herf="#">
+                    <a herf="#click" href="https://joedjensen.github.io/mini-project-css-cheatsheet/">
                         <img src="../Portfolio/assets/images/temp.jpg" alt="work">
                       </a>
                     </div>  
                     <div class="item item2">Porject2
-                      <a herf="#">
+                      <a herf="#click" href="https://joedjensen.github.io/mini-project-css-cheatsheet/">
                         <img src="../Portfolio/assets/images/temp.jpg" alt="work">
                       </a>
                     </div>
                     <div class="item item3">Porject3
-                      <a herf="#">
+                        <a herf="#click" href="https://joedjensen.github.io/mini-project-css-cheatsheet/">
                         <img src="../Portfolio/assets/images/temp.jpg" alt="work">
                       </a>
                     </div>
                     <div class="item item4">Porject4
-                      <a herf="#">
+                        <a herf="#click" href="https://ahhyaya.github.io/Code-refactor/">
                         <img src="../Portfolio/assets/images/temp.jpg" alt="work">
                       </a>
                     </div>
