link different images to grid background

--- a/index.html
+++ b/index.html
@@ -103,22 +103,22 @@
             <section class="card card4">
                 <header>Work</header>
                 <div class="grid-container">
-                    <div class="item item1">Porject1
+                    <div class="item item1" id="project1">Porject1
                     <a herf="#click" href="https://joedjensen.github.io/mini-project-css-cheatsheet/">
                         <img src="../Portfolio/assets/images/temp.jpg" alt="work">
                       </a>
                     </div>  
-                    <div class="item item2">Porject2
+                    <div class="item item2" id="project2">Porject2
                       <a herf="#click" href="https://joedjensen.github.io/mini-project-css-cheatsheet/">
                         <img src="../Portfolio/assets/images/temp.jpg" alt="work">
                       </a>
                     </div>
-                    <div class="item item3">Porject3
+                    <div class="item item3" id="project3">Porject3
                         <a herf="#click" href="https://joedjensen.github.io/mini-project-css-cheatsheet/">
                         <img src="../Portfolio/assets/images/temp.jpg" alt="work">
                       </a>
                     </div>
-                    <div class="item item4">Porject4
+                    <div class="item item4" id="project4">Porject4
                         <a herf="#click" href="https://ahhyaya.github.io/Code-refactor/">
                         <img src="../Portfolio/assets/images/temp.jpg" alt="work">
                       </a>
