add contact info and effect

--- a/index.html
+++ b/index.html
@@ -91,7 +91,11 @@
               <p>Price: $300</p> -->
             </section>
             <section class="card card2">
-              <header>Contact Me</header>
+              <header>Contact Me
+                <a href="#" id ="contact">Phone Number: 123-456-789</a>
+                <a href="#" id ="contact">Email: toruig59@gmail.com</a>
+                <a href="#" id ="contact">Github:ahhyaya</a>
+              </header>
               <!-- <img src="./assets/images/tablet.jpg" alt="tablet" />
               <p>Price: $150</p> -->
             </section>
