adjust padding and border for about me

--- a/index.html
+++ b/index.html
@@ -85,13 +85,13 @@
         <!-- boxes -->
         <div class="category">
             <section class="card card1">
-              <header>About Me</header>
+              <header class="subtitle">About Me</header>
               <p>about me details</p>
               <!-- <img src="./assets/images/camera.jpg" alt="camera" />
               <p>Price: $300</p> -->
             </section>
             <section class="card card2">
-              <header>Contact Me
+              <header class="subtitle">Contact Me
                 <a href="#" id ="contact">Phone Number: 123-456-789</a>
                 <a href="#" id ="contact">Email: toruig59@gmail.com</a>
                 <a href="#" id ="contact">Github:ahhyaya</a>
@@ -105,7 +105,7 @@
               <p>Price: $30</p>  -->
             <!-- </section> -->
             <section class="card card4">
-                <header>Work</header>
+                <header class="subtitle">Work</header>
                 <div class="grid-container">
                     <div class="item item1" id="project1">Porject1
                     <a herf="#click" href="https://joedjensen.github.io/mini-project-css-cheatsheet/">
