change grid to flexbox

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             <!-- </section> -->
             <section class="card card4">
                 <header class="subtitle">Work</header>
-                <div class="grid-container">
+                <div class="flex-container">
                     <div class="item item1" id="project1">Porject1
                     <a herf="#click" href="https://joedjensen.github.io/mini-project-css-cheatsheet/">
                         <img src="../Portfolio/assets/images/temp.jpg" alt="work">
