--- a/index.html
+++ b/index.html
@@ -20,12 +20,13 @@
     <nav>
         <!-- <div class="dropdownnav"> -->
         <a href="#click" class="navbar">
+            <div id="item1"></div>
         <h5 class="navbar-title">About Me</h5>   
         <ul class="navbar-dropdown">
-          <li>food</li>
+          <!-- <li>food</li>
           <li>animals</li>
           <li>fun fact</li>
-          <li>background</li>
+          <li>background</li> -->
         </ul>
         </a>
         
@@ -109,22 +110,22 @@
                 <div class="flex-container">
                     <div class="item item1" id="project1">Porject1
                     <a herf="#click" href="https://joedjensen.github.io/mini-project-css-cheatsheet/">
-                        <img src="../Portfolio/assets/images/temp.jpg" alt="work">
+                        <img src="../Portfolio/assets/images/project-progress-2.webp" alt="work">
                       </a>
                     </div>  
                     <div class="item item2" id="project2">Porject2
                       <a herf="#click" href="https://joedjensen.github.io/mini-project-css-cheatsheet/">
-                        <img src="../Portfolio/assets/images/temp.jpg" alt="work">
+                        <img src="../Portfolio/assets/images/project-progress-2.webp" alt="work">
                       </a>
                     </div>
                     <div class="item item3" id="project3">Porject3
                         <a herf="#click" href="https://joedjensen.github.io/mini-project-css-cheatsheet/">
-                        <img src="../Portfolio/assets/images/temp.jpg" alt="work">
+                        <img src="../Portfolio/assets/images/project-progress-2.webp" alt="work">
                       </a>
                     </div>
                     <div class="item item4" id="project4">Porject4
                         <a herf="#click" href="https://ahhyaya.github.io/Code-refactor/">
-                        <img src="../Portfolio/assets/images/temp.jpg" alt="work">
+                        <img src="../Portfolio/assets/images/project-progress-2.webp" alt="work">
                       </a>
                     </div>
                 </div>
