adjust project boxes max width and height to make it adapt different size browser

--- a/index.html
+++ b/index.html
@@ -95,7 +95,8 @@
               <header class="subtitle">Contact Me
                 <a href="#" id ="contact">Phone Number: 123-456-789</a>
                 <a href="#" id ="contact">Email: toruig59@gmail.com</a>
-                <a href="#" id ="contact">Github:ahhyaya</a>
+                <a href="#" id ="contact">Github: ahhyaya</a>
+                <a href="#" id ="contact">Slack: please add me by my email</a>
               </header>
               <!-- <img src="./assets/images/tablet.jpg" alt="tablet" />
               <p>Price: $150</p> -->
