add border to project images link css snippest cheatsheet to project4

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                     </div>
                     <div class="item item4" id="project4">Porject4
                         <a herf="#click" href="https://ahhyaya.github.io/Code-refactor/">
-                        <img src="../Portfolio/assets/images/project-progress-2.webp" alt="work">
+                        <img src="../Portfolio/assets/images/css snippet cheatsheet pic.png" alt="work">
                       </a>
                     </div>
                 </div>
