link code-factor project to project 3

--- a/index.html
+++ b/index.html
@@ -120,12 +120,12 @@
                       </a>
                     </div>
                     <div class="item item3" id="project3">Porject3
-                        <a herf="#click" href="https://joedjensen.github.io/mini-project-css-cheatsheet/">
-                        <img src="../Portfolio/assets/images/project-progress-2.webp" alt="work">
+                        <a herf="#click" href="https://ahhyaya.github.io/Code-refactor/">
+                        <img src="../Portfolio/assets/images/horiseon.png" alt="work">
                       </a>
                     </div>
                     <div class="item item4" id="project4">Porject4
-                        <a herf="#click" href="https://ahhyaya.github.io/Code-refactor/">
+                        <a herf="#click" href="https://joedjensen.github.io/mini-project-css-cheatsheet/">
                         <img src="../Portfolio/assets/images/css snippet cheatsheet pic.png" alt="work">
                       </a>
                     </div>
