--- a/index.html
+++ b/index.html
@@ -10,6 +10,20 @@
 </head>
 
 <body>
+  <!-- <div class="area" >
+    <ul class="circles">
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+    </ul>
+</div > -->
      <!-- Header -->
   <header>
     <h1>This is Ruihan Gao's Page</h1>
@@ -18,7 +32,6 @@
     </p>
     <!-- Navbar -->
     <nav>
-        <!-- <div class="dropdownnav"> -->
         <a href="#click" class="navbar">
             <div id="item1"></div>
         <h5 class="navbar-title">About Me</h5>   
@@ -56,56 +69,16 @@
             <li>My Portfolio</li>
         </ul>
         </a>
-        <!-- </div> -->
     </nav>
-
-    <div class="area" >
-        <ul class="circles">
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-        </ul>
-    </div >
 </header>
 
     <main>
-        <!-- block -->
-        <!-- <div class="container clearfix">
-            <div class="item item1"></div>
-            <div class="item item2"></div>
-            <div class="item item3"></div>
-            <div class="item item4"></div>
-        </div> -->
         <!-- boxes -->
         <div class="category">
             <section class="card card1">
               <header class="subtitle">About Me</header>
               <p>about me details</p>
-              <!-- <img src="./assets/images/camera.jpg" alt="camera" />
-              <p>Price: $300</p> -->
             </section>
-            <section class="card card2">
-              <header class="subtitle">Contact Me
-                <a href="#" id ="contact">Phone Number: 123-456-789</a>
-                <a href="#" id ="contact">Email: toruig59@gmail.com</a>
-                <a href="#" id ="contact">Github: ahhyaya</a>
-                <a href="#" id ="contact">Slack: please add me by my email</a>
-              </header>
-              <!-- <img src="./assets/images/tablet.jpg" alt="tablet" />
-              <p>Price: $150</p> -->
-            </section>
-            <!-- <section class="card card3">
-              <header> about me details</header> -->
-              <!-- <img src="./assets/images/toilet-paper.jpg" alt="toilet paper" />
-              <p>Price: $30</p>  -->
-            <!-- </section> -->
             <section class="card card4">
                 <header class="subtitle">Work</header>
                 <div class="flex-container">
@@ -131,29 +104,15 @@
                     </div>
                 </div>
             </section>
-              <!-- <header>Work</header>
-              <div class="flex-container">
-                <div class="item item1"></div> -->
-                <!-- <img src="./assets/images/temp.jpg" width="300" height="150" alt="Project 1"> -->
-                <!-- <p>item 1</p> -->
-                <!-- <div class="item item2"></div> -->
-                <!-- <p>item 2</p> -->
-                <!-- <img src="./assets/images/temp.jpg" width="300" height="150" alt="Project 2">
-                <div class="item item3"></div> -->
-                <!-- <p>item 3</p> -->
-                <!-- <img src="./assets/images/temp.jpg" width="300" height="150" alt="Project 3">
-                <div class="item item4"></div> -->
-                <!-- <p>item 4</p> -->
-                <!-- <img src="./assets/images/temp.jpg" width="300" height="150" alt="Project 4">
-             </div>  -->
-              <!-- <img src="./assets/images/wooden-spoons.jpg" alt="wooden spoons" />
-              <p>Price: $10</p> -->
-            <!-- </section> -->
-          <!-- </div> -->
     </main>
 
-    <footer>
-        
+      <footer class="footer">
+        <header class="subtitle">Contact Me
+          <a href="#" id ="contact">Phone Number: 123-456-789</a>
+          <a href="#" id ="contact">Email: toruig59@gmail.com</a>
+          <a href="#" id ="contact">Github: ahhyaya</a>
+          <a href="#" id ="contact">Slack: please add me by my email</a>
+        </header>
     </footer>
 
 </body>
