change footer add more content to footer and fixed project 3/4 display issue

--- a/index.html
+++ b/index.html
@@ -79,25 +79,77 @@
                     </div>
                     <div class="item item3" id="project3">Porject3
                         <a herf="#click" href="https://ahhyaya.github.io/Code-refactor/">
-                        <img src="../Portfolio/assets/images/horiseon.png" alt="work">
+                        <img src="../Portfolio/assets/images/horiseon_300x147.png" alt="work">
                       </a>
                     </div>
                     <div class="item item4" id="project4">Porject4
                         <a herf="#click" href="https://joedjensen.github.io/mini-project-css-cheatsheet/">
-                        <img src="../Portfolio/assets/images/css snippet cheatsheet pic.png" alt="work">
+                        <img src="../Portfolio/assets/images/css_snippet_cheatsheet_pic_300x147.png" alt="work">
                       </a>
                     </div>
                 </div>
             </section>
     </main>
 
-      <footer class="footer">
-        <header class="subtitle">Contact Me
+      <!-- <footer class="footer"> -->
+        <!-- <header class="subtitle">Contact Me
           <a href="#" id ="contact">Phone Number: 123-456-789</a>
           <a href="#" id ="contact">Email: toruig59@gmail.com</a>
           <a href="#" id ="contact">Github: ahhyaya</a>
           <a href="#" id ="contact">Slack: please add me by my email</a>
-        </header>
+        </header> -->
+
+        <!-- Footer main -->
+
+      <footer>
+      <section class="ft-main">
+        <div class="ft-main-item">
+          <h2 class="ft-title">About Me</h2>
+        </div>
+        <div class="ft-main-item">
+          <h2 class="ft-title">Work</h2>
+          <ul>
+            <li><a href="#">Project1</a></li>
+            <li><a href="#">Project2</a></li>
+            <li><a href="#">Project3</a></li>
+            <li><a href="#">Project4</a></li>
+          </ul>
+        </div>
+        <div class="ft-main-item">
+          <h2 class="ft-title">Contact</h2>
+          <ul>
+            <li><a href="#">Phone Number</a></li>
+            <li><a href="#">Email</a></li>
+            <li><a href="#">Github</a></li>
+            <li><a href="#">Slack</a></li>
+          </ul>
+        </div>
+        <div class="ft-main-item">
+          <h2 class="ft-title">Resume</h2>
+          <p>All in progress.</p>
+        </div>
+      </section>
+     
+      <!-- Footer social -->
+      <section class="ft-social">
+        <ul class="ft-social-list">
+          <li><a href="#"><i class="fab fa-facebook"></i></a></li>
+          <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+          <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+          <li><a href="#"><i class="fab fa-github"></i></a></li>
+          <li><a href="#"><i class="fab fa-linkedin"></i></a></li>
+          <li><a href="#"><i class="fab fa-youtube"></i></a></li>
+        </ul>
+      </section>
+     
+      <!-- Footer legal -->
+      <section class="ft-legal">
+        <ul class="ft-legal-list">
+          <li><a href="#">Ruihan Gao &amp; Portfolio</a></li>
+          <li><a href="#">Privacy Policy</a></li>
+          <li>&copy; 2022 UCB BootCaom</li>
+        </ul>
+      </section>
     </footer>
 
 </body>
