add navbar footer link

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </p>
     <!-- Navbar -->
     <nav>
-        <a href="#click" class="navbar">
+        <a href="#about-me" class="navbar">
             <div id="item1"></div>
         <h5 class="navbar-title" href="#about-me">About Me</h5>   
         <ul class="navbar-dropdown">
@@ -29,7 +29,7 @@
         </ul>
         </a>
         
-        <a href="#click" class="navbar">
+        <a href="#work" class="navbar">
         <h5 class="navbar-title">Work</h5>   
         <ul class="navbar-dropdown">
             <li>project1</li>
@@ -39,16 +39,16 @@
         </ul>
         </a>
         
-        <a href="#click" class="navbar">
+        <a href="#contactinfo" class="navbar">
         <h5 class="navbar-title">Contact Me</h5> 
         <ul class="navbar-dropdown">
-            <li href="#contactinfo">Phone</li>
-            <li href="#contactinfo">Email</li>
-            <li href="#contactinfo">Github</li>
-            <li href="#contactinfo">Slack</li>
+            <li>Phone</li>
+            <li>Email</li>
+            <li>Github</li>
+            <li>Slack</li>
         </ul>
         </a>
-        <a href="#click" class="navbar">
+        <a href="#resume" class="navbar">
             <h5 class="navbar-title">Resume</h5> 
         <ul class="navbar-dropdown">
             <li>My Portfolio</li>
@@ -65,7 +65,7 @@
               <p>about me details</p>
             </section>
             <section class="card card4">
-                <header class="subtitle">Work</header>
+                <header class="subtitle" id="work">Work</header>
                 <div class="flex-container">
                     <div class="item item1" id="project1">Porject1
                     <a herf="#click" href="https://joedjensen.github.io/mini-project-css-cheatsheet/">
@@ -118,7 +118,7 @@
           </ul>
         </div>
         <div class="ft-main-item">
-          <h2 class="ft-title">Resume</h2>
+          <h2 class="ft-title" id="resume">Resume</h2>
           <p>All in progress.</p>
         </div>
       </section>
@@ -139,7 +139,7 @@
       <section class="ft-legal">
         <ul class="ft-legal-list">
           <li><a href="#">Ruihan Gao ❤️ Portfolio</a></li>
-          <li>&copy; 2022 UCB BootCaom</li>
+          <li>💻 2022 UCB BootCamp</li>
         </ul>
       </section>
     </footer>
