adjust CSS navbar part format add border radius to dropdown background

--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
             <!-- boxes -->
           <div class="category">
               <section class="card card1">
-                  <header class="subtitle" id="about-me">About Me</header>
+                  <header class="boxtitle" id="about-me">About Me</header>
                   <p>about me details</p>
               </section>
               <section class="card card4">
-                  <header class="subtitle" id="work">Work</header>
+                  <header class="boxtitle" id="work">Work</header>
                   <div class="flex-container">
                       <div class="item item1" id="project1">Porject1
                           <a herf="#click" href="https://joedjensen.github.io/mini-project-css-cheatsheet/">
