fix footer extra space issue

--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
 
     <main>
             <!-- boxes -->
-          <div class="category">
-              <section class="card card1">
-                  <header class="boxtitle" id="about-me">About Me</header>
+          <div class="menu">
+              <section class="menu-content menu-content1">
+                  <header class="menutitle" id="about-me">About Me</header>
                   <p>about me details</p>
               </section>
-              <section class="card card4">
-                  <header class="boxtitle" id="work">Work</header>
+              <section class="menu-content menu-content2">
+                  <header class="menutitle" id="work">Work</header>
                   <div class="flex-container">
                       <div class="item item1" id="project1">Porject1
                           <a herf="#click" href="https://joedjensen.github.io/mini-project-css-cheatsheet/">
