fix display errors and code arrangement

--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
         <!-- Navbar -->
         <nav>
             <a href="#about-me" class="navbar">
-                <div id="item1"></div>
                 <h5 class="navbar-title" href="#about-me">About Me</h5>   
             </a>
             <a href="#work" class="navbar">
@@ -56,23 +55,23 @@
               </section>
               <section class="menu-content menu-content2">
                   <header class="menutitle" id="work">Work</header>
-                  <div class="flex-container">
-                      <div class="item item1" id="project1">Porject1
+                  <div class="work-content">
+                      <div class="project project1" id="project1">Porject1
                           <a herf="#click" href="https://joedjensen.github.io/mini-project-css-cheatsheet/">
                               <img src="../Portfolio/assets/images/project-progress-2.webp" alt="work">
                           </a>
                       </div>  
-                      <div class="item item2" id="project2">Porject2
+                      <div class="project project2" id="project2">Porject2
                           <a herf="#click" href="https://joedjensen.github.io/mini-project-css-cheatsheet/">
                               <img src="../Portfolio/assets/images/project-progress-2.webp" alt="work">
                           </a>
                       </div>
-                      <div class="item item3" id="project3">Porject3
+                      <div class="project project3" id="project3">Porject3
                           <a herf="#click" href="https://ahhyaya.github.io/Code-refactor/">
                               <img src="../Portfolio/assets/images/horiseon_300x147.png" alt="work">
                           </a>
                       </div>
-                      <div class="item item4" id="project4">Porject4
+                      <div class="project project4" id="project4">Porject4
                           <a herf="#click" href="https://joedjensen.github.io/mini-project-css-cheatsheet/">
                               <img src="../Portfolio/assets/images/css_snippet_cheatsheet_pic_300x147.png" alt="work">
                           </a>
@@ -115,7 +114,7 @@
         <section class="ft-info">
             <ul class="ft-info-list">
                 <li><a href="#">Ruihan Gao ❤️ Portfolio</a></li>
-                <li>💻 2022 UCB BootCamp</li>
+                <li><a>💻 2022 UCB BootCamp</a></li>
             </ul>
         </section>
     </footer>
