add profile avatar

--- a/index.html
+++ b/index.html
@@ -51,7 +51,12 @@
           <div class="menu">
               <section class="menu-content menu-content1">
                   <header class="menutitle" id="about-me">About Me</header>
-                  <p>about me details</p>
+                  <img src="../Portfolio/assets/images/avatar1.png" alt="profilepic">
+                 <p>  
+                    Hi! My name is Ruihan Gao. I live in Los Angeles. You can call me Rui.
+                    I have a bachelor's degree in Computer Science with a minor in International Business.
+                    My master's degree is in MBA, major in Leadership and minor in Accounting.
+                    I love to travle with my friends and family. </p>
               </section>
               <section class="menu-content menu-content2">
                   <header class="menutitle" id="work">Work</header>
