change footer text

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <body>
      <!-- Header -->
     <header>
-        <h1>This is Ruihan Gao's Page</h1>
-        <p>header paragraph space</p>
+        <h1>This is Ruihan Gao's Portfolio</h1>
+        <p>under progressing</p>
         <!-- Navbar -->
         <nav>
             <a href="#about-me" class="navbar">
@@ -47,7 +47,6 @@
     </header>
 
     <main>
-            <!-- boxes -->
           <div class="menu">
               <section class="menu-content menu-content1">
                   <header class="menutitle" id="about-me">About Me</header>
@@ -86,7 +85,7 @@
         </div>
     </main>
 
-        <!-- Footer main -->
+        <!-- Footer -->
     <footer>
         <section class="ft-main">
             <div class="ft-main-item">
@@ -113,7 +112,7 @@
             </div>
             <div class="ft-main-item">
                 <h2 class="ft-title" id="resume">Resume</h2>
-                <p>All in progress.</p>
+                <p>New updates coming!</p>
             </div>
         </section>
         <section class="ft-info">
