updated project links

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <a href="#resume" class="navbar">
                 <h5 class="navbar-title">Resume</h5> 
                 <ul class="navbar-dropdown">
-                    <li>My Portfolio</li>
+                    <li>upload soon</li>
                 </ul>
             </a>
         </nav>
@@ -61,12 +61,12 @@
                   <header class="menutitle" id="work">Work</header>
                   <div class="work-content">
                       <div class="project project1" id="project1">Porject1
-                          <a herf="#click" href="https://joedjensen.github.io/mini-project-css-cheatsheet/">
+                          <a herf="#click" href="">
                               <img src="../Portfolio/assets/images/project-progress-2.webp" alt="work">
                           </a>
                       </div>  
                       <div class="project project2" id="project2">Porject2
-                          <a herf="#click" href="https://joedjensen.github.io/mini-project-css-cheatsheet/">
+                          <a herf="#click" href="">
                               <img src="../Portfolio/assets/images/project-progress-2.webp" alt="work">
                           </a>
                       </div>
