add project 2 with link and image

--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
                           </a>
                       </div>  
                       <div class="project project2" id="project2">Porject2
-                          <a herf="#click" href="">
-                              <img src="../Portfolio/assets/images/project-progress-2.webp" alt="work">
+                          <a herf="#click" href="http://legenesis.herokuapp.com/">
+                              <img src="./assets/images/project2.png" alt="work">
                           </a>
                       </div>
                       <div class="project project3" id="project3">Porject3
