change project 1 and project 2 name

--- a/index.html
+++ b/index.html
@@ -57,12 +57,12 @@
               <section class="menu-content menu-content2">
                   <header class="menutitle" id="work">Work</header>
                   <div class="work-content">
-                      <div class="project project1" id="project1">Porject1
+                      <div class="project project1" id="project1">Info-Spout
                           <a herf="#click" href="https://kevinpxu.github.io/Info-Spout/">
                               <img src="../Portfolio/assets/images/project1.png" alt="work">
                           </a>
                       </div>  
-                      <div class="project project2" id="project2">Porject2
+                      <div class="project project2" id="project2">LéGenesis
                           <a herf="#click" href="http://legenesis.herokuapp.com/">
                               <img src="./assets/images/project2.png" alt="work">
                           </a>
